# axum_serde_valid

./: Cargo.toml  README.md
.github/workflows/: Publish.yml
src/: extract.rs  json.rs  lib.rs  query.rs  rejection.rs
src/extract/: query.rs  rejection.rs
