[package]
name = "axum_serde_valid"
description = "Axum extractor sets of JSON validation."
edition = "2021"
version = "0.22.0"
license = "MIT"
repository = "https://github.com/yassun7010/axum_serde_valid.git"
authors = ["yassun7010 <yassun7010@outlook.com>"]
keywords = ["axum", "validation", "serde", "json_schema"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "^0.1"
axum = "^0.7"
serde_valid = "^0.20"
serde = "^1.0"

[dev-dependencies]
hyper = "^1.0"
mime = "0.3"
tokio = { version = "1.24", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
serde_json = "^1.0"

[features]
default = []
